# alg-ds

./: .gitignore  1.c  23Tree.c  23Tree.h  23plus_trees.h  23tree.c  AAtree.c  AAtree.h  AVL.c  AVL.h  B.c  BFS.c  BFS.cpp  BFS.h  BTree.c  BTree.h  B_Tree.c  B_Tree.h  Bplus.h  Btree.c  Btree.h  C2.c  C2.h  C2.sln  C2.vcxproj  C4.c  C4.h  CMakeLists.txt  DFS.c  DFS.h  Dekart.c  Dekart.h  E.c  E1.c  E1.h  E4-Test.cpp  E4.c  E4_Site.c  E4_Site_Test.cpp  E6.c  (+191 more)
B/tests/: CMakeLists.txt  testIntegrationMemAlloc+Free.cpp  testMemAlloc.cpp  testMemFree.cpp  testMemInit.cpp  utils.cpp  utils.h
E/tests/: CMakeLists.txt  main.cpp  testDeletion.cpp  testFindNode.cpp  testFixHeight.cpp  testFixLen.cpp  testInsertion.cpp  testNTOL.cpp
lab-1/: .gitignore  2-3_tree.c  2-3_tree.h  A10_Bolshakova.c  AA-tree.c  A_25-Test.sln  Alg_Lab_A.sln  CMakeLists.txt  Clear.c  DLL.c  DLL.h  Data.txt  E.c  Function.h  Functions.c  Functions.h  Header.h  Interface.cpp  Interface.h  LabA.c  LabA.h  LabA.sln  LabA.vcxproj  LabA.vcxproj.filters  LabA18.c  LabA18_Gtest.c  LabA_gtest.sln  LabA_gtest.vcxproj  Lab_1.sln  Lab_A_Fisyuk.vcxproj  Lab_A_Fisyuk.vcxproj.filters  Laba_1_26.sln  Laba_2_15.sln  LinkedList.c  List.c  List.h  ListBirthDay.c  ListBirthDay.h  Lukin.c  Lukin_Line_Traits.docx  (+118 more)
lab-1/A32/: A32.sln  A32.vcxproj  A32.vcxproj.filters  list.c  list.h  main.c  table1.csv  tableMerge.csv
lab-1/Alg_Lab_A/: Alg_Lab_A.vcxproj  Alg_Lab_A.vcxproj.filters  input1.txt  input11.txt  input2.txt  input22.txt  list_functions.c  list_functions.h  main.c  output.txt  output1.txt  output2.txt
lab-1/BTest/: test.cpp
lab-1/B_tree/: B_tree.c  Header.h
lab-1/Comp/: Source.c
lab-1/E_Tests/: test.cpp
lab-1/Google_tests/: CMakeLists.txt  test1.cpp  tmp.c
lab-1/HashTests/: test.cpp
lab-1/Header/: Header.h
lab-1/LAB-2/: LAB-2.cpp  memallocator.h
lab-1/LAB_3/: Header.h  LAB_3.c
lab-1/LAB_4/: LAB_4.c  Tree.h
lab-1/LAB_H/: DekartTree.h  LAB_H.c
lab-1/LAB_I/: Header.h  LAB_I.c
lab-1/LAB_J/: Header.h  LAB_J.c
lab-1/Lab-A-Test/: Lab-A-Test.vcxproj  test.cpp
lab-1/src/: join.c  (+5 more)
(+903 files in other folders)
